# borderline

./: .gitignore  README.md  pyproject.toml
locations/: capitols.yaml
src/: main.py  test_detection.py
src/aruco/: aruco.py
src/schemas/: location.py
src/utils/: file_handler.py  image.py  logger.py
